updating tags in theme to work on wordpress.org

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -8,7 +8,7 @@ Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: the-authority
-Tags: Blog, Custom Menu, Editor Style, Featured Images, One Column, Two Columns, Right Sidebar, Footer Widgets, Custom Logo, E-Commerce, News
+Tags: blog, custom-menu, editor-style, featured-images, one-column, two-columns, right-sidebar, footer-widgets, custom-logo, e-commerce, news
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
