updating theme uri to final theme demo destination

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /*!
 Theme Name: The Authority
-Theme URI: https://jasonyingling.me
+Theme URI: http://preview.jasonyingling.me/the-authority
 Author: Jason Yingling
 Author URI: https://jasonyingling.me
 Description: The Authority is a lightning fast, responsive WordPress theme designed to make your content the center of attention. Activate the theme and get started sharing your authority with the world. Looking to release an ebook? No problem. The Authority supports Easy Digital Downloads so you can get started selling too.
