--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,6 @@
 /*!
 Theme Name: The Authority
-Theme URI: http://preview.jasonyingling.me/the-authority
+Theme URI: https://jasonyingling.me/wordpress-themes/the-authority
 Author: Jason Yingling
 Author URI: https://jasonyingling.me
 Description: The Authority is a lightning fast, responsive WordPress theme designed to make your content the center of attention. Activate the theme and get started sharing your authority with the world. Looking to release an ebook? No problem. The Authority supports Easy Digital Downloads so you can get started selling too.
@@ -10,8 +10,8 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: the-authority
 Tags: blog, custom-menu, editor-style, featured-images, one-column, two-columns, right-sidebar, footer-widgets, custom-logo, e-commerce, news
 
-This theme, like WordPress, is licensed under the GPL.
-Use it to make something cool, have fun, and share what you've learned with others.
+The Authority WordPress Theme, Copyright 2017 Jason Yingling
+The Authority is distributed under the terms of the GNU GPL
 
 The Authority is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
