fixing issues with translatable text and sanitization for released to WP.org

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -225,6 +225,15 @@ div.cat-links {
 	}
 }
 
+.tax-string {
+	display: block;
+	@include font-size(0.75);
+	color: $color__secondaryShade;
+	opacity: 0.75;
+	font-style: italic;
+	margin-bottom: 0.25em;
+}
+
 .comments-link {
 	a {
 		&:before {
