updating to version 1.1.0

--- a/sass/elements/_elements.scss
+++ b/sass/elements/_elements.scss
@@ -57,6 +57,35 @@ hr {
 	margin-bottom: 1.5em;
 }
 
+figure,
+.wp-block-gallery {
+	margin-top: 1.5em;
+	margin-bottom: 1.5em;
+}
+
+.content-area-full {
+	.alignfull,
+	.alignwide {
+		width: 100vw;
+		position: relative;
+		left: 50%;
+		right: 50%;
+		margin-left: -50vw;
+		margin-right: -50vw;
+		text-align: center;
+
+		img, iframe {
+			width: 100%;
+		}
+	}
+
+	.alignwide {
+		img {
+			max-width: 1024px;
+		}
+	}
+}
+
 @import "lists";
 
 img {
