--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,4 +1,5 @@
 @import "../layout/content-sidebar";
+@import "../layout/grids";
 //@import "../layout/sidebar-content";
 /*--------------------------------------------------------------
 ## Posts and pages
@@ -14,3 +15,8 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+## Testimonials
+--------------------------------------------------------------*/
+@import "primary/testimonials";
