--- a/sass/site/primary/_comments.scss
+++ b/sass/site/primary/_comments.scss
@@ -1,7 +1,11 @@
 .comments-section {
 	background-color: $color__secondaryTint;
-	padding: 40px 0;
+	padding: 40px;
 	margin-top: 60px;
+
+	@include media($mobile) {
+		padding: 20px 0;
+	}
 }
 
 .comments-area {
@@ -140,14 +144,14 @@
 	input[type="email"],
 	input[type="url"] {
 		height: 40px;
-		border: none;
+		border: 1px solid $color__secondaryShade;
 		border-radius: 0;
 		padding: 0 10px;
 		width: 100%;
 	}
 
 	textarea {
-		border: none;
+		border: 1px solid $color__secondaryShade;
 		border-radius: 0;
 		padding: 10px;
 		width: 100%;
