--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://jasonyingling.me/wordpress-themes/the-authority/
 Author: Jason Yingling
 Author URI: https://jasonyingling.me
 Description: The Authority is a lightning fast, responsive WordPress theme designed to make your content the center of attention. Activate the theme and get started sharing your authority with the world. Looking to release an ebook? No problem. The Authority supports Easy Digital Downloads so you can get started selling too.
-Version: 1.0.7
+Version: 1.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: the-authority
@@ -68,6 +68,11 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Normalize
 --------------------------------------------------------------*/
 @import "normalize";
+
+/*--------------------------------------------------------------
+# Animations
+--------------------------------------------------------------*/
+@import "animations";
 
 /*--------------------------------------------------------------
 # Typography
