--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://jasonyingling.me/wordpress-themes/the-authority/
 Author: Jason Yingling
 Author URI: https://jasonyingling.me
 Description: The Authority is a lightning fast, responsive WordPress theme designed to make your content the center of attention. Activate the theme and get started sharing your authority with the world. Looking to release an ebook? No problem. The Authority supports Easy Digital Downloads so you can get started selling too.
-Version: 1.0.7
+Version: 1.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: the-authority
@@ -85,15 +85,15 @@ html {
 # FontAwesome
 --------------------------------------------------------------*/
 /*!
- *  Font Awesome 4.6.2 by @davegandy - http://fontawesome.io - @fontawesome
+ *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
 /* FONT PATH
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url("fonts/fontawesome-webfont.eot?v=4.6.2");
-  src: url("fonts/fontawesome-webfont.eot?#iefix&v=4.6.2") format("embedded-opentype"), url("fonts/fontawesome-webfont.woff2?v=4.6.2") format("woff2"), url("fonts/fontawesome-webfont.woff?v=4.6.2") format("woff"), url("fonts/fontawesome-webfont.ttf?v=4.6.2") format("truetype"), url("fonts/fontawesome-webfont.svg?v=4.6.2#fontawesomeregular") format("svg");
+  src: url("fonts/fontawesome-webfont.eot?v=4.7.0");
+  src: url("fonts/fontawesome-webfont.eot?#iefix&v=4.7.0") format("embedded-opentype"), url("fonts/fontawesome-webfont.woff2?v=4.7.0") format("woff2"), url("fonts/fontawesome-webfont.woff?v=4.7.0") format("woff"), url("fonts/fontawesome-webfont.ttf?v=4.7.0") format("truetype"), url("fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -2477,6 +2477,7 @@ html {
 }
 
 .fa-battery-4:before,
+.fa-battery:before,
 .fa-battery-full:before {
   content: "";
 }
@@ -2923,6 +2924,194 @@ html {
   content: "";
 }
 
+.fa-google-plus-circle:before,
+.fa-google-plus-official:before {
+  content: "";
+}
+
+.fa-fa:before,
+.fa-font-awesome:before {
+  content: "";
+}
+
+.fa-handshake-o:before {
+  content: "";
+}
+
+.fa-envelope-open:before {
+  content: "";
+}
+
+.fa-envelope-open-o:before {
+  content: "";
+}
+
+.fa-linode:before {
+  content: "";
+}
+
+.fa-address-book:before {
+  content: "";
+}
+
+.fa-address-book-o:before {
+  content: "";
+}
+
+.fa-vcard:before,
+.fa-address-card:before {
+  content: "";
+}
+
+.fa-vcard-o:before,
+.fa-address-card-o:before {
+  content: "";
+}
+
+.fa-user-circle:before {
+  content: "";
+}
+
+.fa-user-circle-o:before {
+  content: "";
+}
+
+.fa-user-o:before {
+  content: "";
+}
+
+.fa-id-badge:before {
+  content: "";
+}
+
+.fa-drivers-license:before,
+.fa-id-card:before {
+  content: "";
+}
+
+.fa-drivers-license-o:before,
+.fa-id-card-o:before {
+  content: "";
+}
+
+.fa-quora:before {
+  content: "";
+}
+
+.fa-free-code-camp:before {
+  content: "";
+}
+
+.fa-telegram:before {
+  content: "";
+}
+
+.fa-thermometer-4:before,
+.fa-thermometer:before,
+.fa-thermometer-full:before {
+  content: "";
+}
+
+.fa-thermometer-3:before,
+.fa-thermometer-three-quarters:before {
+  content: "";
+}
+
+.fa-thermometer-2:before,
+.fa-thermometer-half:before {
+  content: "";
+}
+
+.fa-thermometer-1:before,
+.fa-thermometer-quarter:before {
+  content: "";
+}
+
+.fa-thermometer-0:before,
+.fa-thermometer-empty:before {
+  content: "";
+}
+
+.fa-shower:before {
+  content: "";
+}
+
+.fa-bathtub:before,
+.fa-s15:before,
+.fa-bath:before {
+  content: "";
+}
+
+.fa-podcast:before {
+  content: "";
+}
+
+.fa-window-maximize:before {
+  content: "";
+}
+
+.fa-window-minimize:before {
+  content: "";
+}
+
+.fa-window-restore:before {
+  content: "";
+}
+
+.fa-times-rectangle:before,
+.fa-window-close:before {
+  content: "";
+}
+
+.fa-times-rectangle-o:before,
+.fa-window-close-o:before {
+  content: "";
+}
+
+.fa-bandcamp:before {
+  content: "";
+}
+
+.fa-grav:before {
+  content: "";
+}
+
+.fa-etsy:before {
+  content: "";
+}
+
+.fa-imdb:before {
+  content: "";
+}
+
+.fa-ravelry:before {
+  content: "";
+}
+
+.fa-eercast:before {
+  content: "";
+}
+
+.fa-microchip:before {
+  content: "";
+}
+
+.fa-snowflake-o:before {
+  content: "";
+}
+
+.fa-superpowers:before {
+  content: "";
+}
+
+.fa-wpexplorer:before {
+  content: "";
+}
+
+.fa-meetup:before {
+  content: "";
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -3163,6 +3352,85 @@ th {
 }
 
 /*--------------------------------------------------------------
+# Animations
+--------------------------------------------------------------*/
+.aty-border {
+  background: none;
+  border: 0;
+  box-shadow: inset 0 0 0 2px transparent;
+  color: #a3a1a1;
+  font-size: inherit;
+  font-weight: 700;
+  position: relative;
+  vertical-align: middle;
+}
+
+.aty-border::before, .aty-border::after {
+  box-sizing: inherit;
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.aty-border figure {
+  margin-top: 0;
+}
+
+.aty-draw {
+  transition: color 0.25s;
+}
+
+.aty-draw::before, .aty-draw::after {
+  border: 2px solid transparent;
+  width: 0;
+  height: 0;
+}
+
+.aty-draw::before {
+  top: 0;
+  left: 0;
+}
+
+.aty-draw::after {
+  bottom: 0;
+  right: 0;
+}
+
+.aty-draw:hover::before, .aty-draw:hover::after {
+  width: 100%;
+  height: 100%;
+}
+
+.aty-draw:hover::before {
+  transition: width 0.25s ease-out, height 0.25s ease-out 0.25s;
+}
+
+.aty-draw:hover::after {
+  transition: border-color 0s ease-out 0.5s, width 0.25s ease-out 0.5s, height 0.25s ease-out 0.75s;
+}
+
+.aty-meet:hover {
+  color: #f46060;
+}
+
+.aty-meet::after {
+  top: 0;
+  left: 0;
+}
+
+.aty-meet:hover::before {
+  border-top-color: #f46060;
+  border-right-color: #f46060;
+}
+
+.aty-meet:hover::after {
+  border-bottom-color: #f46060;
+  border-left-color: #f46060;
+  transition: height 0.25s ease-out, width 0.25s ease-out 0.25s;
+}
+
+/*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
 body,
@@ -3356,6 +3624,33 @@ hr {
   border: 0;
   height: 1px;
   margin-bottom: 1.5em;
+}
+
+figure,
+.wp-block-gallery {
+  margin-top: 1.5em;
+  margin-bottom: 1.5em;
+}
+
+.content-area-full .alignfull,
+.content-area-full .alignwide {
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
+  text-align: center;
+}
+
+.content-area-full .alignfull img, .content-area-full .alignfull iframe,
+.content-area-full .alignwide img,
+.content-area-full .alignwide iframe {
+  width: 100%;
+}
+
+.content-area-full .alignwide img {
+  max-width: 1024px;
 }
 
 ul, ol {
@@ -5958,15 +6253,91 @@ html.mm-effect-slide-listitems.mm-opening .mm-menu.mm-effect-slide-listitems .mm
   margin-right: 0;
 }
 
+.authority-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.authority-grid > article {
+  width: 32%;
+}
+
+.aty-post-hover:hover .aty-post-overlay {
+  opacity: 0.75;
+}
+
+.aty-post-hover:hover .aty-post-overlay h2 {
+  transform: translateY(0);
+}
+
+.aty-post-overlay {
+  transition: opacity .75s ease-in-out;
+  background: #f46060;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 2;
+  color: #ffffff;
+  padding: 1em;
+  display: flex;
+  align-items: flex-end;
+}
+
+.aty-post-overlay h2 {
+  transition: transform .5s ease-in-out;
+  margin: 0;
+  transform: translateY(-1em);
+}
+
+@supports (object-fit: cover) {
+  .authority-grid > article > figure {
+    height: 100%;
+  }
+  .authority-grid > article > figure a {
+    display: block;
+    height: 100%;
+  }
+  .authority-grid > article .attachment-post-thumbnail {
+    object-fit: cover;
+    height: 100%;
+  }
+}
+
+@supports (display: grid) {
+  .authority-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 10vw);
+    grid-auto-rows: 10vw;
+    grid-auto-flow: dense;
+    grid-gap: 20px;
+  }
+  .authority-grid > article {
+    width: 100%;
+    margin-bottom: 0;
+    grid-column: span 2;
+    grid-row: span 4;
+  }
+  .authority-grid > article.aty-layout-two, .authority-grid > article:nth-child(2), .authority-grid > article:nth-child(3), .authority-grid > article:nth-child(5n+7), .authority-grid > article:nth-child(5n+8) {
+    grid-column: span 1;
+    grid-row: span 2;
+  }
+  .authority-grid > article.aty-layout-two h2, .authority-grid > article:nth-child(2) h2, .authority-grid > article:nth-child(3) h2, .authority-grid > article:nth-child(5n+7) h2, .authority-grid > article:nth-child(5n+8) h2 {
+    font-size: 27.2px;
+    font-size: 1.7rem;
+  }
+}
+
 /*--------------------------------------------------------------
 ## Posts and pages
 --------------------------------------------------------------*/
 .sticky {
   display: block;
-}
-
-.hentry {
-  margin: 0 0 3em;
 }
 
 .aty-featured-image {
@@ -5976,6 +6347,15 @@ html.mm-effect-slide-listitems.mm-opening .mm-menu.mm-effect-slide-listitems .mm
 .content-area-full .entry-header {
   text-align: center;
   margin-bottom: 3rem;
+}
+
+.content-area-sidebar .aty-featured-image {
+  margin-top: 1em;
+}
+
+.content-area-sidebar article {
+  content: "";
+  display: table;
 }
 
 .single .site-content,
@@ -6015,18 +6395,25 @@ html.mm-effect-slide-listitems.mm-opening .mm-menu.mm-effect-slide-listitems .mm
   display: inline;
 }
 
+.banner-sidebar {
+  padding-top: 40px;
+}
+
+.comments-area {
+  max-width: 43rem;
+  margin: 1em auto 0;
+}
+
 .content-area-full.content-full-width .page-content,
 .content-area-full.content-full-width .entry-content,
 .content-area-full.content-full-width .entry-summary,
 .content-area-full.content-full-width .entry-footer,
 .content-area-full.content-full-width .post-navigation,
-.content-area-full.content-full-width .comments-area,
 .content-area-full .error-404 .page-content,
 .content-area-full .error-404 .entry-content,
 .content-area-full .error-404 .entry-summary,
 .content-area-full .error-404 .entry-footer,
-.content-area-full .error-404 .post-navigation,
-.content-area-full .error-404 .comments-area {
+.content-area-full .error-404 .post-navigation {
   max-width: 100%;
 }
 
@@ -6047,8 +6434,7 @@ html.mm-effect-slide-listitems.mm-opening .mm-menu.mm-effect-slide-listitems .mm
 .content-area-full .entry-content,
 .content-area-full .entry-summary,
 .content-area-full .entry-footer,
-.content-area-full .post-navigation,
-.content-area-full .comments-area {
+.content-area-full .post-navigation {
   max-width: 43rem;
   margin: 1em auto 0;
 }
@@ -6123,18 +6509,6 @@ html.mm-effect-slide-listitems.mm-opening .mm-menu.mm-effect-slide-listitems .mm
 .content-area-full .error-404 input[type="search"] {
   padding: 6px;
   width: 400px;
-}
-
-.page-content,
-.entry-content,
-.entry-summary {
-  margin: 1em 0 0;
-}
-
-.page-content > *:first-child,
-.entry-content > *:first-child,
-.entry-summary > *:first-child {
-  margin-top: 0;
 }
 
 .entry-intro {
@@ -6245,8 +6619,14 @@ div.cat-links a:hover, div.cat-links a:focus {
 --------------------------------------------------------------*/
 .comments-section {
   background-color: #efeded;
-  padding: 40px 0;
+  padding: 40px;
   margin-top: 60px;
+}
+
+@media screen and (max-width: 640px) {
+  .comments-section {
+    padding: 20px 0;
+  }
 }
 
 @media screen and (max-width: 640px) {
@@ -6435,14 +6815,14 @@ div.cat-links a:hover, div.cat-links a:focus {
 .comment-form input[type="email"],
 .comment-form input[type="url"] {
   height: 40px;
-  border: none;
+  border: 1px solid #a3a1a1;
   border-radius: 0;
   padding: 0 10px;
   width: 100%;
 }
 
 .comment-form textarea {
-  border: none;
+  border: 1px solid #a3a1a1;
   border-radius: 0;
   padding: 10px;
   width: 100%;
@@ -6452,6 +6832,58 @@ div.cat-links a:hover, div.cat-links a:focus {
   font-style: italic;
   font-size: 14px;
   font-size: 0.875rem;
+  margin-top: 0;
+}
+
+/*--------------------------------------------------------------
+## Testimonials
+--------------------------------------------------------------*/
+.aty-square-grid {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.aty-square-grid > article {
+  display: flex;
+  flex-direction: row;
+  width: 48%;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+}
+
+.aty-square-grid > article:nth-child(even) figure {
+  order: 2;
+}
+
+.aty-square-grid > article figure {
+  width: 40%;
+  flex: 1 0 auto;
+}
+
+.aty-square-grid > article .attachment-post-thumbnail {
+  object-fit: cover;
+  height: 100%;
+}
+
+.aty-testimonial figure {
+  margin: 0;
+}
+
+.aty-testimonial-title {
+  font-size: 16px;
+  font-size: 1rem;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+
+.aty-testimonial-content {
+  font-size: 18px;
+  font-size: 1.125rem;
+  padding: 1.25em;
+}
+
+.aty-testimonial-content > *:first-child {
   margin-top: 0;
 }
 
@@ -6511,6 +6943,11 @@ object {
 
 .wp-caption-text {
   text-align: center;
+}
+
+figcaption {
+  font-size: 16px;
+  font-size: 1rem;
 }
 
 /*--------------------------------------------------------------
