--- a/authority-editor-style.css
+++ b/authority-editor-style.css
@@ -32,9 +32,8 @@ textarea {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-weight: normal;
+  font-weight: 600;
   clear: both;
-  -webkit-font-smoothing: antialiased;
 }
 
 h1 {
