--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -11,6 +11,14 @@
 	}
 }
 
+.menu {
+	> li {
+		> .sub-menu {
+			box-shadow: 0px 1px 10px rgba( 0, 0, 0, .25 );
+		}
+	}
+}
+
 .main-navigation {
 	@include font-size(1);
 	clear: both;
