--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -7,6 +7,11 @@
 }
 
 .content-area-full {
+	article:not(.has-post-thumbnail) {
+		.entry-header {
+			margin-bottom: 0;
+		}
+	}
 	.entry-header {
 		text-align: center;
 		margin-bottom: 3rem;
@@ -86,7 +91,9 @@
 	}
 
 	.post,
-	.page {
+	.page,
+	.jetpack-portfolio,
+	.jetpack-testimonial {
 		@extend %post;
 		max-width: 1440px;
 		padding: 0 40px;
