--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,16 +1,16 @@
 /*!
 Theme Name: The Authority
-Theme URI: https://jasonyingling.me/wordpress-themes/the-authority/
+Theme URI: https://www.themes.pizza/downloads/the-authority-pro/
 Author: Jason Yingling
-Author URI: https://jasonyingling.me
+Author URI: https://themes.pizza
 Description: The Authority is a lightning fast, responsive WordPress theme designed to make your content the center of attention. Activate the theme and get started sharing your authority with the world. Looking to release an ebook? No problem. The Authority supports Easy Digital Downloads so you can get started selling too.
-Version: 1.1.0
+Version: 1.1.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: the-authority
 Tags: blog, custom-menu, editor-style, featured-images, one-column, two-columns, right-sidebar, footer-widgets, custom-logo, e-commerce, news
 
-The Authority WordPress Theme, Copyright 2017 Jason Yingling
+The Authority WordPress Theme, Copyright 2018 Jason Yingling
 The Authority is distributed under the terms of the GNU GPL
 
 The Authority is based on Underscores http://underscores.me/, (C) 2012-2015 Automattic, Inc.
