--- a/sass/typography/_headings.scss
+++ b/sass/typography/_headings.scss
@@ -1,8 +1,7 @@
 h1, h2, h3, h4, h5, h6 {
 	font-family: $font__title;
-	font-weight: normal;
+	font-weight: 600;
 	clear: both;
-	-webkit-font-smoothing: antialiased;
 }
 
 h1 {
