gutenberg updates and removing extra conditional check

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -20,3 +20,8 @@
 ## Testimonials
 --------------------------------------------------------------*/
 @import "primary/testimonials";
+
+/*--------------------------------------------------------------
+# Gutenberg
+--------------------------------------------------------------*/
+@import "gutenberg/gutenberg";
