--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://www.themes.pizza/downloads/the-authority-pro/
 Author: Jason Yingling
 Author URI: https://themes.pizza
 Description: The Authority is a lightning fast, responsive WordPress theme designed to make your content the center of attention. Activate the theme and get started sharing your authority with the world. Looking to release an ebook? No problem. The Authority supports Easy Digital Downloads so you can get started selling too.
-Version: 1.1.1
+Version: 1.1.4
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: the-authority
@@ -18,6 +18,18 @@ Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
 Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
+
+Font Awesome v4.7.0 icon font, Copyright 2017 Font Awesome
+Font Awesome is licensed under the terms of the MIT License
+Source: http://fontawesome.io
+
+jQuery mmenu, Copyright 2015 Fred Heusschen
+jQuery.mmenu v5.4.0 is licensed under the terms of the MIT License
+Source: https://github.com/FrDH/jQuery.mmenu/releases/tag/v5.4.0
+
+Zuul Pro incorporates code from Easy Digital Downloads, Copyright 2018 Sandhills Development
+Easy Digital Downloads is distributed under the terms of the GNU GPL
+Source: https://easydigitaldownloads.com/
 */
 
 /*--------------------------------------------------------------
